--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,14 @@ jobs:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
+      - uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+          repository: ocavue/protoc
+          tags: "3.11.4"
+          path: protoc/3.11.4/Dockerfile
+
       - name: upload
         run: |
           docker login -u $username -p $password
