--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,7 +19,7 @@ jobs:
           repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
           tags: "0.3.1,latest"
           path: protoc-toolkit
-          always_pull: true
+          cache_froms: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit:latest
 
       - name: upload
         run: |
