pre-pull protoc-toolkit

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,6 +11,12 @@ jobs:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
+      - name: pre-pull protoc-toolkit
+        run: |
+          docker pull $repository
+        env:
+          repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
+
       - name: protoc-toolkit
         uses: docker/build-push-action@v1
         with:
