clean npm cache

--- a/protoc-toolkit/Dockerfile
+++ b/protoc-toolkit/Dockerfile
@@ -31,11 +31,12 @@ RUN go get -u -v moul.io/protoc-gen-gotemplate
 
 FROM node:14-buster-slim
 RUN npm install -g typescript@3
+RUN npm cache clean
 COPY --from=builder /usr/local/bin/protoc           /usr/local/bin/protoc
 COPY --from=builder /go/bin/protoc-gen-go           /usr/local/bin/protoc-gen-go
 COPY --from=builder /go/bin/protoc-go-inject-tag    /usr/local/bin/protoc-go-inject-tag
 COPY --from=builder /go/bin/protoc-gen-validate     /usr/local/bin/protoc-gen-validate
 COPY --from=builder /go/bin/protoc-gen-typescript   /usr/local/bin/protoc-gen-typescript
 COPY --from=builder /go/bin/protoc-gen-gotemplate   /usr/local/bin/protoc-gen-gotemplate
-RUN apt-get update && apt-get install -y clang-format && apt-get clean
 RUN ls -lrth /usr/local/bin/proto*
+RUN apt-get update && apt-get install -y clang-format && apt-get clean
