--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,13 +11,20 @@ jobs:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
+      - name: Pre-pull image
+        run: |
+          docker pull $username/protoc-toolkit
+        env:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+
       - name: protoc-toolkit
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
-          tags: "0.5.1,latest"
+          tags: "0.5.2,latest"
           path: protoc-toolkit
 
       # - name: upload
