--- a/protoc-toolkit/Dockerfile
+++ b/protoc-toolkit/Dockerfile
@@ -16,12 +16,6 @@ RUN go get -u -v github.com/golang/protobuf/protoc-gen-go
 # install /go/bin/protoc-go-inject-tag
 RUN go get -u -v github.com/favadi/protoc-go-inject-tag
 
-# install /go/bin/protoc-gen-validate
-# installing PGV can currently only be done from source
-RUN go get -d -u -v github.com/envoyproxy/protoc-gen-validate && \
-    cd $GOPATH/src/github.com/envoyproxy/protoc-gen-validate && \
-    make build
-
 # install /go/bin/protoc-gen-typescript
 RUN go get -u -v github.com/ocavue/protoc-gen-typescript
 
@@ -30,6 +24,13 @@ RUN go get -u -v moul.io/protoc-gen-gotemplate
 
 # install /go/bin/protolint
 RUN go get -u -v github.com/yoheimuta/protolint/cmd/protolint
+
+# install /go/bin/protoc-gen-validate
+# installing PGV can currently only be done from source
+RUN go get -d github.com/envoyproxy/protoc-gen-validate && \
+    cd $GOPATH/src/github.com/envoyproxy/protoc-gen-validate && \
+    git status && \
+    make build
 
 FROM node:14-buster-slim
 RUN npm install -g typescript@3 && npm cache clean --force
