--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
-          tags: "0.8.0,latest"
+          tags: "latest"
           path: protoc-toolkit
 
       # - name: upload
