--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,20 +11,22 @@ jobs:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
-      # - name: Pre-pull image
-      #   run: |
-      #     docker pull $username/protoc-toolkit
-      #   env:
+      # - name: protoc-toolkit
+      #   uses: docker/build-push-action@v1
+      #   with:
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      #     repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
+      #     tags: "latest"
+      #     path: protoc-toolkit
 
-      - name: protoc-toolkit
+      - name: kubectl
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
-          tags: "latest"
+          repository: ${{ secrets.DOCKER_USERNAME }}/kubectl
+          tags: "1.18.10"
           path: protoc-toolkit
 
       # - name: upload
