--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,7 +27,7 @@ jobs:
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           repository: ${{ secrets.DOCKER_USERNAME }}/kubectl
           tags: "1.18.10"
-          path: protoc-toolkit
+          path: kubectl
 
       # - name: upload
       #   run: |
