--- a/kubectl/Dockerfile
+++ b/kubectl/Dockerfile
@@ -5,3 +5,7 @@ RUN curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.18.10/
     chmod +x ./kubectl && \
     mv ./kubectl /usr/local/bin/kubectl && \
     kubectl version --client
+
+RUN curl -o /usr/local/bin/gomplate -sSL https://github.com/hairyhenderson/gomplate/releases/download/v3.8.0/gomplate_linux-amd64 && \
+    chmod 755 /usr/local/bin/gomplate && \
+    gomplate --version
