--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -20,20 +20,21 @@ jobs:
       #     tags: "latest"
       #     path: protoc-toolkit
 
-      - name: kubectl
-        uses: docker/build-push-action@v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/kubectl
-          tags: "1.18.10"
-          path: kubectl
-
-      # - name: upload
-      #   run: |
-      #     docker login -u $username -p $password
-      #     ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0 $username/nginx-ingress-controller:0.32.0
-      #     ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.29.0 $username/nginx-ingress-controller:0.29.0
-      #   env:
+      # - name: kubectl
+      #   uses: docker/build-push-action@v1
+      #   with:
       #     username: ${{ secrets.DOCKER_USERNAME }}
       #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      #     repository: ${{ secrets.DOCKER_USERNAME }}/kubectl
+      #     tags: "1.18.10"
+      #     path: kubectl
+
+      - name: upload
+        run: |
+          docker login -u $username -p $password
+          # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0 $username/nginx-ingress-controller:0.32.0
+          # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.29.0 $username/nginx-ingress-controller:0.29.0
+          ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.41.2 $username/nginx-ingress-controller:v0.41.2
+        env:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
