--- a/node-with-coscmd/Dockerfile
+++ b/node-with-coscmd/Dockerfile
@@ -1,3 +1,4 @@
 FROM node:14-buster
 
-RUN apt-get install -y python3-pip
+RUN apt-get update && apt-get install -y python3-pip
+RUN pip3 install coscmd
