--- a/node-with-coscmd/Dockerfile
+++ b/node-with-coscmd/Dockerfile
@@ -1,4 +1,6 @@
 FROM node:14-buster
 
-RUN apt-get update && apt-get install -y python3-pip
-RUN pip3 install coscmd
+RUN apt-get update && \
+    apt-get install -y python3-pip && \
+    rm -rf /var/lib/{apt,dpkg,cache,log} && \
+    pip3 --no-cache-dir install coscmd
