nginx-ingress-controller:v0.43.0

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,7 +43,8 @@ jobs:
           docker login -u $username -p $password
           # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0 $username/nginx-ingress-controller:0.32.0
           # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.29.0 $username/nginx-ingress-controller:0.29.0
-          ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.41.2 $username/nginx-ingress-controller:v0.41.2
+          # ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.41.2 $username/nginx-ingress-controller:v0.41.2
+          ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.43.0 $username/nginx-ingress-controller:v0.43.0
         env:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
