--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,23 +11,23 @@ jobs:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
-      # - name: protoc-toolkit
-      #   uses: docker/build-push-action@v1
-      #   with:
-      #     username: ${{ secrets.DOCKER_USERNAME }}
-      #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-      #     repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
-      #     tags: "latest"
-      #     path: protoc-toolkit
-
-      - name: node-with-coscmd
+      - name: protoc-toolkit
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/node-with-coscmd
-          tags: "14-buster"
-          path: node-with-coscmd
+          repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
+          tags: "0.9.0"
+          path: protoc-toolkit
+
+      # - name: node-with-coscmd
+      #   uses: docker/build-push-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      #     repository: ${{ secrets.DOCKER_USERNAME }}/node-with-coscmd
+      #     tags: "14-buster"
+      #     path: node-with-coscmd
 
       # - name: kubectl
       #   uses: docker/build-push-action@v1
@@ -38,13 +38,13 @@ jobs:
       #     tags: "1.18.10"
       #     path: kubectl
 
-      - name: upload
-        run: |
-          docker login -u $username -p $password
-          # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0 $username/nginx-ingress-controller:0.32.0
-          # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.29.0 $username/nginx-ingress-controller:0.29.0
-          # ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.41.2 $username/nginx-ingress-controller:v0.41.2
-          ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.43.0 $username/nginx-ingress-controller:v0.43.0
-        env:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      # - name: upload
+      #   run: |
+      #     docker login -u $username -p $password
+      #     # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0 $username/nginx-ingress-controller:0.32.0
+      #     # ./upload.sh quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.29.0 $username/nginx-ingress-controller:0.29.0
+      #     # ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.41.2 $username/nginx-ingress-controller:v0.41.2
+      #     ./upload.sh k8s.gcr.io/ingress-nginx/controller:v0.43.0 $username/nginx-ingress-controller:v0.43.0
+      #   env:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
