--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,14 +11,23 @@ jobs:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
-      - name: protoc-toolkit
+      - name: elasticsearch
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
-          tags: "0.15.3"
-          path: protoc-toolkit
+          repository: ${{ secrets.DOCKER_USERNAME }}/elasticsearch/7.10.1
+          tags: "7.10.1.0"
+          path: elasticsearch
+
+      # - name: protoc-toolkit
+      #   uses: docker/build-push-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
+      #     repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
+      #     tags: "0.15.3"
+      #     path: protoc-toolkit
 
       # - name: node-with-coscmd
       #   uses: docker/build-push-action@v1
