--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,9 +16,9 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/elasticsearch/7.10.1
+          repository: ${{ secrets.DOCKER_USERNAME }}/elasticsearch
           tags: "7.10.1.0"
-          path: elasticsearch
+          path: elasticsearch/7.10.1
 
       # - name: protoc-toolkit
       #   uses: docker/build-push-action@v1
