--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,25 +11,25 @@ jobs:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
-      - name: elasticsearch
+      - name: elasticsearch-prod
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           repository: ${{ secrets.DOCKER_USERNAME }}/elasticsearch
+          path: elasticsearch/7.10.1
           dockerfile: "prod.dockerfile"
           tags: "7.10.1-prod.1"
-          path: elasticsearch/7.10.1
 
-      - name: elasticsearch
+      - name: elasticsearch-dev
         uses: docker/build-push-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
           repository: ${{ secrets.DOCKER_USERNAME }}/elasticsearch
+          path: elasticsearch/7.10.1
           dockerfile: "dev.dockerfile"
           tags: "7.10.1-dev.1"
-          path: elasticsearch/7.10.1
 
       # - name: protoc-toolkit
       #   uses: docker/build-push-action@v1
