--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,30 +6,51 @@ on:
 
 jobs:
   docker:
-    runs-on: "ubuntu-18.04"
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code repository
         uses: actions/checkout@v2
 
-      - name: elasticsearch-prod
-        uses: docker/build-push-action@v1
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/elasticsearch
-          path: elasticsearch/7.10.1
-          dockerfile: "elasticsearch/7.10.1/prod.dockerfile"
-          tags: "7.10.1-prod.1"
+
+      - name: Login to Tencent Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ccr.ccs.tencentyun.com
+          username: ${{ secrets.TENCENT_DOCKER_USERNAME }}
+          password: ${{ secrets.TENCENT_DOCKER_PASSWORD }}
+
+      - name: elasticsearch-prod
+        uses: docker/build-push-action@v2
+        with:
+          context: elasticsearch/7.10.1/
+          file: elasticsearch/7.10.1/prod.dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: |
+            guanmaidocker/7.10.1-prod.1
+            ccr.ccs.tencentyun.com/guanmai/7.10.1-prod.1
 
       - name: elasticsearch-dev
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
-          repository: ${{ secrets.DOCKER_USERNAME }}/elasticsearch
-          path: elasticsearch/7.10.1
-          dockerfile: "elasticsearch/7.10.1/dev.dockerfile"
-          tags: "7.10.1-dev.1"
+          context: elasticsearch/7.10.1/
+          file: elasticsearch/7.10.1/dev.dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: |
+            guanmaidocker/7.10.1-dev.1
+            ccr.ccs.tencentyun.com/guanmai/7.10.1-dev.1
 
       # - name: protoc-toolkit
       #   uses: docker/build-push-action@v1
@@ -39,7 +60,6 @@ jobs:
       #     repository: ${{ secrets.DOCKER_USERNAME }}/protoc-toolkit
       #     tags: "0.15.3"
       #     path: protoc-toolkit
-
       # - name: node-with-coscmd
       #   uses: docker/build-push-action@v1
       #   with:
@@ -48,7 +68,6 @@ jobs:
       #     repository: ${{ secrets.DOCKER_USERNAME }}/node-with-coscmd
       #     tags: "14-buster"
       #     path: node-with-coscmd
-
       # - name: kubectl
       #   uses: docker/build-push-action@v1
       #   with:
@@ -57,7 +76,6 @@ jobs:
       #     repository: ${{ secrets.DOCKER_USERNAME }}/kubectl
       #     tags: "1.18.10"
       #     path: kubectl
-
       # - name: upload
       #   run: |
       #     docker login -u $username -p $password
