--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -33,24 +33,34 @@ jobs:
       - name: elasticsearch-prod
         uses: docker/build-push-action@v2
         with:
+          platforms: linux/amd64
           context: elasticsearch/7.10.1/
           file: elasticsearch/7.10.1/prod.dockerfile
-          platforms: linux/amd64
           push: true
           tags: |
-            guanmaidocker/7.10.1-prod.1
-            ccr.ccs.tencentyun.com/guanmai/7.10.1-prod.1
+            guanmaidocker:7.10.1-prod.1
+            ccr.ccs.tencentyun.com/guanmai:7.10.1-prod.1
 
-      - name: elasticsearch-dev
-        uses: docker/build-push-action@v2
-        with:
-          context: elasticsearch/7.10.1/
-          file: elasticsearch/7.10.1/dev.dockerfile
-          platforms: linux/amd64
-          push: true
-          tags: |
-            guanmaidocker/7.10.1-dev.1
-            ccr.ccs.tencentyun.com/guanmai/7.10.1-dev.1
+      # - name: elasticsearch-dev
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     platforms: linux/amd64
+      #     context: elasticsearch/7.10.1/
+      #     file: elasticsearch/7.10.1/dev.dockerfile
+      #     push: true
+      #     tags: |
+      #       guanmaidocker:7.10.1-dev.1
+      #       ccr.ccs.tencentyun.com/guanmai:7.10.1-dev.1
+
+      # - name: protoc-toolkit
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     platforms: linux/amd64
+      #     context: protoc-toolkit/
+      #     push: true
+      #     tags: |
+      #       guanmaidocker/protoc-toolkit:0.15.4
+      #       ccr.ccs.tencentyun.com/guanmai/protoc-toolkit:0.15.4
 
       # - name: protoc-toolkit
       #   uses: docker/build-push-action@v1
