--- a/protoc-toolkit/Dockerfile
+++ b/protoc-toolkit/Dockerfile
@@ -81,6 +81,9 @@ RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add - && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /var/cache/apt/lists
 
+# install /go/bin/protoc-gen-sql
+RUN go get code.guanmai.cn/back_end/protoc-gen-sql
+
 FROM base
 COPY --from=builder /usr/local/bin/protoc                   /usr/local/sbin/protoc
 COPY --from=builder /go/bin/protoc-gen-go                   /usr/local/sbin/protoc-gen-go
@@ -99,5 +102,6 @@ COPY --from=builder /usr/local/bin/kubectl                  /usr/local/sbin/kube
 COPY --from=builder /usr/local/bin/gomplate                 /usr/local/sbin/gomplate
 COPY --from=builder /go/bin/revive                          /usr/local/sbin/revive
 COPY --from=builder /usr/local/bin/golangci-lint            /usr/local/sbin/golangci-lint
+COPY --from=builder /go/bin/protoc-gen-sql                  /usr/local/sbin/protoc-gen-sql
 RUN ls -lrth /usr/local/sbin/
 
